# experiment_framework_bic

./: .gitignore  LICENSE.txt  pyproject.toml  readme.md  requirements.txt
auto_experiment/: auto_experiment.py  cuda_distributed_experiment.py
auto_utils/: layers.py  logging.py  parameterization.py
docs/: BTSP_experiment_ASD.md
testing/: test_cuda_distributed_exp.py
tests/: conftest.py
tests/auto_experiment/: test_cuda_distributed_exp.py
tests/auto_utils/: test_parameterization.py
utils/: layers.py  parameterization.py
